# epaxos

./: .gitignore  CMakeLists.txt  README.md  run.sh  run_workload.sh  setup.sh  test.sh  workload.csv
experiments/: 3-replicas-wan.json  5-replicas-wan.json
experiments/results/: makeTable.sh  make_table.py  plot_deps_hotkey.py  plot_skew_table.py  skew99-20client-server0-lan.csv  skew99-20client-server0-wan.csv  skew_clients_table.csv  skew_clients_table_lan.csv  skew_clients_table_wan.csv
experiments/results/5-replicas-wan/: 5-replicas-wan.json
experiments/results/5-replicas-wan/2025-12-12-11-16-43/: 5-replicas-wan-0.json
experiments/results/5-replicas-wan/2025-12-12-11-16-43/2025-12-12-11-16-43/: 5-replicas-wan-0-1.json  5-replicas-wan-0-2.json  5-replicas-wan-0-3.json  5-replicas-wan-0-4.json  5-replicas-wan-0-5.json  5-replicas-wan-0-6.json
experiments/results/5-replicas-wan/2025-12-12-11-16-43/plots/: aggregate-combined-0.gpi  aggregate-combined-1.gpi  aggregate-combined-2.gpi  aggregate-combined-3.gpi  aggregate-combined-4.gpi  aggregate-combined-5.gpi  aggregate-combined-6.gpi  aggregate-combined-7.gpi  aggregate-combined-8.gpi  aggregate-combined-log-0.gpi  aggregate-combined-log-1.gpi  aggregate-combined-log-2.gpi  aggregate-combined-log-3.gpi  aggregate-combined-log-4.gpi  aggregate-combined-log-5.gpi  aggregate-combined-log-6.gpi  aggregate-combined-log-7.gpi  aggregate-combined-log-8.gpi  aggregate-write-0.gpi  aggregate-write-1.gpi  aggregate-write-2.gpi  aggregate-write-3.gpi  aggregate-write-4.gpi  aggregate-write-5.gpi  aggregate-write-6.gpi  aggregate-write-7.gpi  aggregate-write-8.gpi  aggregate-write-log-0.gpi  aggregate-write-log-1.gpi  aggregate-write-log-2.gpi  aggregate-write-log-3.gpi  aggregate-write-log-4.gpi  aggregate-write-log-5.gpi  aggregate-write-log-6.gpi  aggregate-write-log-7.gpi  aggregate-write-log-8.gpi  tput-lat-p50.gpi  tput-lat-p99.gpi
experiments/results/dep-size-lan-50/: 5-replicas-wan.json
experiments/results/dep-size-lan-50/2025-12-12-10-22-42/: 5-replicas-wan-0.json
experiments/results/dep-size-lan-50/2025-12-12-10-22-42/2025-12-12-10-22-42/: 5-replicas-wan-0-1.json  5-replicas-wan-0-10.json  5-replicas-wan-0-3.json  5-replicas-wan-0-4.json  5-replicas-wan-0-5.json  5-replicas-wan-0-6.json  5-replicas-wan-0-9.json
experiments/results/dep-size-skew-0/2025-12-12-10-06-06/: 5-replicas-wan-0.json
experiments/results/dep-size-skew-0/2025-12-12-10-06-06/2025-12-12-10-06-06/: 5-replicas-wan-0-0.json  5-replicas-wan-0-2.json  5-replicas-wan-0-6.json  5-replicas-wan-0-7.json  5-replicas-wan-0-9.json
experiments/results/dep-size-skew-0/2025-12-12-10-06-06/plots/: aggregate-combined-0.gpi  aggregate-combined-1.gpi  aggregate-combined-10.gpi  aggregate-combined-2.gpi  aggregate-combined-3.gpi  aggregate-combined-4.gpi  aggregate-combined-5.gpi  aggregate-combined-6.gpi  aggregate-combined-7.gpi  aggregate-combined-8.gpi  aggregate-combined-9.gpi  aggregate-combined-log-0.gpi  aggregate-combined-log-1.gpi  aggregate-combined-log-10.gpi  aggregate-combined-log-2.gpi  aggregate-combined-log-3.gpi  aggregate-combined-log-4.gpi  aggregate-combined-log-5.gpi  aggregate-combined-log-6.gpi  aggregate-combined-log-7.gpi  aggregate-combined-log-8.gpi  aggregate-combined-log-9.gpi  aggregate-write-0.gpi  aggregate-write-1.gpi  aggregate-write-10.gpi  aggregate-write-2.gpi  aggregate-write-3.gpi  aggregate-write-4.gpi  aggregate-write-5.gpi  aggregate-write-6.gpi  aggregate-write-7.gpi  aggregate-write-8.gpi  aggregate-write-9.gpi  aggregate-write-log-0.gpi  aggregate-write-log-1.gpi  aggregate-write-log-10.gpi  aggregate-write-log-2.gpi  aggregate-write-log-3.gpi  aggregate-write-log-4.gpi  aggregate-write-log-5.gpi  (+6 more)
experiments/results/optimal_commit_latency/: commit_latency_wan.py
experiments/results/optimal_commit_latency/2025-12-11-18-45-05/: 5-replicas-wan-0.json  5-replicas-wan-1.json
experiments/results/optimal_commit_latency/2025-12-11-18-45-05/2025-12-11-18-45-05/: 5-replicas-wan-0-0.json  5-replicas-wan-0-1.json  (+3 more)
experiments/results/skew00-lan-100keys-consolidated/: 10.csv  1280.csv  160.csv  20.csv  320.csv  40.csv  5.csv  640.csv  80.csv
experiments/results/skew00-wan-100keys-consolidated/: 10-server0.csv  10.csv  1280.csv  160.csv  20-server0.csv  20.csv  2560.csv  320.csv  40-server0.csv  40.csv  5-server0.csv  5.csv  5120.csv  640.csv  80-server0.csv  80.csv
experiments/results/skew50-lan-100keys-consolidated/: 10.csv  1280.csv  160.csv  20.csv  320.csv  40.csv  5.csv  640.csv  80.csv
experiments/results/skew50-wan-100keys-consolidated/: 10-server0.csv  10.csv  1280.csv  160.csv  20-server0.csv  20.csv  2560.csv  320.csv  40-server0.csv  40.csv  5-server0.csv  5.csv  5120.csv  640.csv  80.csv
experiments/results/skew99-lan-100keys-consolidated/: 10.csv  1280.csv  160.csv  20.csv  320.csv  40.csv  5.csv  640.csv  80.csv
experiments/results/skew99-wan-100keys-consolidated/: 10-server0.csv  10.csv  1280.csv  160.csv  20.csv  2560.csv  320.csv  40-server0.csv  40.csv  5-server0.csv  5.csv  5120.csv  640.csv  80.csv
experiments/results/tail-latency/: 5-replicas-wan.json  tail_latency.py
experiments/results/tail-latency/2025-12-11-22-00-38/: 5-replicas-wan-0.json  5-replicas-wan-1.json
grpc-test/: CMakeLists.txt  client  mp_client  mp_server  run.sh  run_mp_workload.sh  run_workload.sh  server  test.sh  workload.csv
grpc-test/.cache/clangd/index/: client.cpp.A912537525E07C2F.idx  server.cpp.0DB22D33328A4458.idx
grpc-test/proto/: epaxos.proto
grpc-test/src/: client.cpp  graph.hpp  mp_client.cpp  mp_server.cpp  mp_types.hpp  server.cpp  types.hpp  workload.cpp  workload.hpp
proto/: epaxos.proto  multipaxos.proto
scripts/: depGraphGen.py
scripts/lib/: experiment_codebase.py  project_codebase.py  wrappers.py
scripts/utils/: eval_util.py  experiment_util.py  remote_util.py
src/: client.cpp  ep-client.cpp  ep-server.cpp  ep_client.cpp  ep_server.cpp  graph.hpp  messages.hpp  mp_client.cpp  mp_server.cpp  mp_types.hpp  server.cpp  types.hpp  utils.cpp  utils.h  utils.hpp  workload.cpp
(+434 files in other folders)
